stripping CR/LF in href attrs on mouse over or mouse click b=52119 r=harishd